@@ -1,6 +1,6 @@
       logical function pre_seqsiz(lfnout,lfnseq,filseq,nseq,nlnk)
 c
-c $Id: pre_seqsiz.F,v 1.5 1998-06-08 23:29:38 d3j191 Exp $
+c $Id: pre_seqsiz.F,v 1.6 1998-09-16 22:16:41 d3j191 Exp $
 c
 c     function to scan the sequence file for the number of segments
 c
@@ -34,6 +34,10 @@ c
       goto 1
       endif
       if(card(1:4).eq.'link') then
+      nlnk=nlnk+1
+      goto 1
+      endif
+      if(card(1:4).eq.'LINK') then
       nlnk=nlnk+1
       goto 1
       endif
